# smoke-test

./: CMakeLists.txt  test.cmake
.github/workflows/: test.yml
